[service] Generate service files from templates
Use make service/[systemd|freebsd|macos] > path/to/destfile
and customise

--- a/service/examples/macos.plist
+++ b/service/examples/macos.plist
@@ -2,33 +2,33 @@
   Example file for a macOS launch agent (user space) or daemon (system)
 
   Customise the details below then:
-   - save it to /Library/LaunchDaemons/<app-ID>.plist
-   - run sudo launchctl load /Library/LaunchDaemons/<app-ID>.plist to load the service
-   - run sudo launchctl unload /Library/LaunchDaemons/<app-ID>.plist to stop the service
+   - save it to /Library/LaunchDaemons/@APPID@.plist
+   - run sudo launchctl load /Library/LaunchDaemons/@APPID@.plist to load the service
+   - run sudo launchctl unload /Library/LaunchDaemons/@APPID@.plist to stop the service
 -->
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
   <dict>
     <key>Label</key>
-    <string>dev.tardia.vito.c2hat-server</string>
+    <string>@APPID@</string>
     <key>ProgramArguments</key>
     <array>
-      <string>/usr/local/bin/c2hat-server</string>
+      <string>/usr/local/bin/@APPNAME@-server</string>
       <string>start</string>
       <string>--foreground</string>
     </array>
     <key>UserName</key>
-    <string>_c2hat</string>
+    <string>_@APPNAME@</string>
     <key>RunAtLoad</key>
     <true/>
     <key>KeepAlive</key>
     <true/>
   	<key>StandardErrorPath</key>
-  	<string>/usr/local/c2hat/server.log</string>
+  	<string>/usr/local/@APPNAME@/server.log</string>
   	<key>StandardOutPath</key>
-  	<string>/usr/local/c2hat/server.log</string>
+  	<string>/usr/local/@APPNAME@/server.log</string>
   	<key>WorkingDirectory</key>
-  	<string>/usr/local/c2hat</string>
+  	<string>/usr/local/@APPNAME@</string>
   </dict>
 </plist>
